2008-01-25  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-sound.c: Set sound to enabled by default. Bug
	#511928.

2007-10-17  Christian Persch  <chpe@gnome.org>

	* configure.in: Post release version bump.

======================= libgnome 2.20.1.1 ========================

2007-10-16  Christian Persch  <chpe@gnome.org>

	* schemas/Makefile.am: Install the .schemas files, not the
	.schemas.in. Bug #478299.

2007-10-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release version bump.

======================= libgnome 2.20.1 ========================

2007-09-19  Christian Persch  <chpe@gnome.org>

	* schemas/Makefile.am: Don't distribute built schema files. Bug
	#478299. Fix "make clean" not to remove files generated by configure.

======================= libgnome 2.20.0 ========================

2007-08-30  Christian Persch  <chpe@gnome.org>

	* configure.in: We don't need a macros dir.

2007-08-28  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnome/gnome-program.c: (split_file_list), (get_module_path),
	(find_module), (gnome_program_module_load): Fix module loading. Bug
	#410549, patch by Mariano Suárez-Alvarez.

2007-08-27  Lucas Rocha  <lucasr@gnome.org>

	Define new default wallpaper for desktop. 
	Patch from Vincent Untz <vuntz@gnome.org>

	* gnome-data/Makefile.am, gnome-data/gnome-default.xml.in.in:
	new wallpaper definition file.
	* schemas/Makefile.am, schemas/desktop_gnome_background.schemas.in.in:
	new default background settings.
	* schemas/desktop_gnome_background.schemas.in: removed.

2007-08-22  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnome/libgnome-2.0-uninstalled.pc.in:
	* libgnome/libgnome-2.0.pc.in: Only depend on esd when esd support is
	compiled in. Bug #460199, patch by Daniel Gryniewicz.

======================= libgnome 2.19.0 ========================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* autogen.sh:
	* doc/reference/tmpl/gnome-program.sgml: