@@ -1,3 +1,7 @@
+2008-04-09  Stefan Kost  <ensonic@users.sf.net>
+
+	* libgnome/gnome-program.c: Unref GConfClient. Bug #525815
+
 2008-01-25  Christian Persch  <chpe@gnome.org>
 
 	* libgnome/gnome-sound.c: Set sound to enabled by default. Bug
